--- a/.github/workflows/website-builder.yml
+++ b/.github/workflows/website-builder.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Build website
         run: |
           pwd
-          cd website
+          cd new
           npm ci
           npm install
           npm run build
