--- a/.github/workflows/website-builder.yml
+++ b/.github/workflows/website-builder.yml
@@ -22,8 +22,7 @@ jobs:
           npm install
           npm run build
           cd dist
-          rm ../../deepracer-console-new.zip
-          zip -r ../../deepracer-console-new.zip .
+          rm -f ../../deepracer-console-new.zip && zip -r ../../deepracer-console-new.zip .
       - name: Commit updated website
         run: |
           git config user.name github-actions
