--- a/new/package.json
+++ b/new/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-joystick-component": "^6.2.1",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
