Updated package name and versioning mechanism (#27)
* Package rename and versioning

* Cleaner version if zero additional commits

* Fixing renaming

* Tune version number

--- a/package/control
+++ b/package/control
@@ -1,7 +1,7 @@
-Package: aws-deepracer-device-console-new
+Package: aws-deepracer-community-device-console
 Replaces: aws-deepracer-device-console
 Provides: aws-deepracer-device-console
-Version: 2.5.0.0+community
+Version: 0.0.0.0
 Section: base
 Priority: optional
 Maintainer: AWS DeepRacer Community
