--- a/new/package.json
+++ b/new/package.json
@@ -23,6 +23,7 @@
     "sass": "^1.83.4"
   },
   "devDependencies": {
+    "@types/node": "^22.13.11",
     "@types/react": "^18.2.55",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18.2.19",
